// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render cell (offset) 1`] = `
<div
  className="col_5 colOffset__5"
>
  test
</div>
`;

exports[`Should render cell 1`] = `
<div
  className="col_5"
>
  test
</div>
`;
